--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css" />
 </head>
 <body>
-<div id="example"></div>
+<div id="app"></div>
 
-<!-- Dependencies -->
-<script src="./node_modules/react/umd/react.development.js"></script>
-<script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-
-<!-- Main -->
-<script src="./dist/bundle.js"></script>
 </body>
 </html>
